[package]
name = "tcp-port-scanner"
version = "0.1.0"
edition = "2024"
authors = ["Michael Judge <judgemichael04@gmail.com>"]
description = "A Rust-based command-line TCP Port Scanner for Cybersecurity Learning and Testing"
license = "MIT"
readme = "README.md"
repository = "https://github.com/michaeljudge75/TCP-Port-Scanner"
categories = ["network-programming", "security", "command-line-utilities"]


[dependencies]
assert_cmd = "2.1.1"
clap = { version = "4.5.51", features = ["derive"] }
fmt = "0.1.0"
predicates = "3.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"


[[bin]]
name = "tcp-port-scanner"
path = "src/main.rs"
